--- a/Auction/WebContent/WEB-INF/web.xml
+++ b/Auction/WebContent/WEB-INF/web.xml
@@ -4,9 +4,9 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee">
   <display-name>Struts1x</display-name>
   <welcome-file-list>
-    <welcome-file>home/home.html</welcome-file>
+  <welcome-file>home/home.html</welcome-file>
+   <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.htm</welcome-file>
-   <!--  <welcome-file>index.jsp</welcome-file> -->
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
